tests/specs/test/finally_timeout/main.out
Check [WILDCARD]/main.ts
running 2 tests from ./main.ts
error ... FAILED ([WILDCARD])
success ... ok ([WILDCARD])

 ERRORS 

error => ./main.ts:[WILDCARD]
error: Error: fail
    throw new Error("fail");
          ^
    at [WILDCARD]/main.ts:4:11

 FAILURES 

error => ./main.ts:[WILDCARD]

FAILED | 1 passed | 1 failed ([WILDCARD])

error: Test failed
